# Exia-Labs

./: .gitignore  CLAUDE.md  README.md  assign_servo_id.py  query_servo.py  scan_baud.py  sweep_gear_servo.py  sweep_servo.py  test_gearshift.py  test_joy_sender.py  test_phidgets.py  test_serial.py  test_servo.py
.claude/agents/: ackermann-chassis-specialist.md  algorithm-researcher.md  control-systems-engineer.md  control-theory-debugger.md  depth-camera-developer.md  driver-control-specialist.md  gps-rtk-developer.md  imu-sensor-developer.md  jetson-arduino-hardware-integrator.md  lidar-specialist.md  sim-platform-advisor.md
VNV/: query_servo.py  sweep_gear_servo.py  test_gearshift.py  test_lss.py  test_motor_receiver.py  test_phidgets.py  test_servo.py  tune_steering.py
arduino/exia_servo_controller/: exia_servo_controller.ino  rc_control_lss.ino  rc_control_pwm.ino
arduino/gear_controller/: gear_controller.ino
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/exia_bringup/share/exia_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/exia_bringup/share/exia_bringup/cmake/: exia_bringupConfig-version.cmake  exia_bringupConfig.cmake
install/exia_control/lib/exia_control/: ackermann_drive_node  drive_forward_test_node  dynamic_navigator_node  hw_teleop  lss_calibrate  nav_to  teleop  turn_to_heading_test_node
install/exia_control/share/exia_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/exia_driver/lib/exia_driver/: gps_transform_node  imu_node  radio_bridge_node  rc_driver_node
install/exia_driver/share/exia_driver/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/exia_ground_description/lib/exia_ground_description/: ackermann_drive_node.py  ackermann_hal_base.py  ackermann_hal_hardware.py  ackermann_odometry.py  atv_hardware_interface.py  dynamic_navigator_node.py  mission_navigator_node.py  move_forward.py  navigation_node.py  path_follower_node.py  ps4_teleop_node.py  rc_driver_control_node.py  xbox_teleop_node.py
install/exia_ground_description/share/exia_ground_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/exia_msgs/share/exia_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build  latest_list
scripts/: 99-exia-arduino.rules  99-exia-gps.rules  99-exia-imu.rules  99-exia-lss.rules  99-exia-odrive.rules  99-exia-radio.rules  exia-robot.service  exia_disable_autostart.sh  exia_enable_autostart.sh  exia_startup.sh  exia_status.sh  generate_radio_keys.sh  ros_env.sh  test_lss.py  wifi_setup.sh
src/exia_bringup/: CMakeLists.txt  package.xml
src/exia_bringup/config/: ackermann_controllers.yaml  cyclonedds_base.xml  cyclonedds_robot.xml  gps_params.yaml  imu_params.yaml  nav2_params.yaml  pointcloud_to_laserscan.yaml  radio_bridge_reference.md  radio_params.yaml  septentrio_rover.yaml  slam_toolbox_params.yaml  wifi_params.yaml
src/exia_bringup/launch/: autonomous.launch.py  autonomous_hw.launch.py  drive_test.launch.py  gps_navigation.launch.py  radio.launch.py  rc_control.launch.py  rc_phidget_control.launch.py  sim.launch.py  turn_test.launch.py  wifi.launch.py
src/exia_bringup/urdf/: exia_ground.urdf.xacro
src/exia_control/: package.xml  setup.cfg  setup.py
src/exia_control/exia_control/: ackermann_drive_node.py  drive_forward_test_node.py  dynamic_navigator_node.py  hw_teleop_node.py  nav_to_cmd.py  teleop_node.py  turn_to_heading_test_node.py
src/exia_control/exia_control/argus/: exia_ros_vehicle.py
src/exia_control/exia_control/blue/: models.py
src/exia_control/exia_control/blue_core/: scheduler.py  service.py
src/exia_control/exia_control/gui/: blue_config_panel.py
src/exia_control/exia_control/navigation/: __init__.py  path_smoother.py  path_validator.py
src/exia_control/exia_control/planning/: pure_pursuit.py
src/exia_driver/: package.xml  setup.cfg  setup.py
src/exia_driver/exia_driver/: gps_publisher_node.py  gps_transform_node.py  radio_bridge_node.py  rc_driver_node.py  rc_phidget_driver_node.py  wifi_bridge_node.py
src/exia_ground_description/: CMakeLists.txt  package.xml
src/exia_ground_description/config/: nav2_params.yaml  octomap_params.yaml  robot_localization.yaml
src/exia_ground_description/launch/: dynamic_nav.launch.py  exia_ground_sim.launch.py  mission_nav.launch.py  slam.launch.py
src/exia_ground_description/rviz/: exia_ground.rviz  exia_slam_nav.rviz
src/exia_ground_description/scripts/: ackermann_controller.py  ackermann_drive_node.py  atv_controller.py  steering_controller.py
src/exia_ground_description/scripts/active/: ackermann_drive_node.py  ackermann_odometry.py  dynamic_navigator_node.py  mission_navigator_node.py  path_follower_node.py  pointcloud_obstacle_detector.py  ps4_teleop_node.py  rc_driver_control_node.py  scan_qos_bridge.py  xbox_teleop_node.py
src/exia_ground_description/scripts/archive/: ackermann_hal_simulation.py  navigation_node.py  waypoint_follower.py
src/exia_ground_description/scripts/log/: latest_build
src/exia_ground_description/src/exia_control/: __init__.py
src/exia_ground_description/src/exia_control/control/: ackermann_drive.py
src/exia_ground_description/src/exia_control/hal/: __init__.py  base.py  simulation.py
src/exia_ground_description/src/exia_control/navigation/: __init__.py  ackermann_planner.py  path_validator.py
src/exia_ground_description/src/exia_control/perception/: pointcloud_processor.py
src/exia_ground_description/src/exia_control/planning/: __init__.py  pure_pursuit.py
src/exia_ground_description/urdf/: exia_ground.urdf  exia_ground.urdf.xacro
src/exia_ground_description/worlds/: exia_world.sdf  forest_world.sdf  hills_world.sdf  terrain_world.sdf
src/exia_msgs/: CMakeLists.txt
src/exia_msgs/msg/: NavigationGoal.msg
(+100 files in other folders)
