<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>exia_control</name>
  <version>1.0.0</version>
  <description>Navigation and control logic for Exia Ground robot</description>
  <maintainer email="zech@example.com">Zechariah Wang</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>exia_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
